fix(slider): slider handle aligns with track when font size changes

--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -95,7 +95,7 @@
     bg-transparent
     p-0
     outline-none;
-  transform: translate(var(--calcite-slider-thumb-x-offset), var(--calcite-slider-thumb-y-offset));
+  transform: translateX(var(--calcite-slider-thumb-x-offset));
 
   .handle__label {
     &.static,
